kustomize/immich/overlays/thomelab/immich-ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ts-immich
  namespace: immich
  annotations:
    tailscale.com/funnel: "true"
spec:
  tls:
    - hosts:
        - photos
