kustomize/immich/overlays/thomelab/immich-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ts-immich
spec:
  defaultBackend:
    service:
      name: immich-server
      port:
        name: http
  ingressClassName: tailscale
